Listview and detailview for the clients
login url redirected to the dashboard.
Listview for all the client updated through FBA form.
pk and fk update between user and clients.
Detailview for the each users update on clients.
Custom made delete or update button for the login user, user must login to see the clients.
pagination with count of client. numbers(for testing only two of the client details will be displaying).

--- a/PBSS/users/templates/users/post_detail.html
+++ b/PBSS/users/templates/users/post_detail.html
@@ -3,6 +3,56 @@
 {% block content %}
         {% load static %}
         {% load crispy_forms_tags %}
+<nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="{% url 'index' %}">PBSS</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+					<li>
+                        <a class="page-scroll" href="{% url 'index' %}">Home</a>
+                    </li>
+                    <li>
+                         {% if user.is_authenticated %}
+                     <li>
+                                 <a class="page-scroll" href="{% url 'client' %}">Client</a>
+                             </li>
+                             <li>
+                                 <a class="page-scroll" href="{% url 'profile' %}">Profile</a>
+                             </li>
+                             <li>
+                                 <a class="page-scroll" href="{% url 'logout' %}">Logout</a>
+                             </li>
+                     </li>
+                             <li>
+
+                         {% else %}
+                            <a class="page-scroll" href="#portal">Signup</a>
+                        </li>
+                         {% endif %}
+
+                        <li>
+                            <a class="page-scroll" href="{% url 'contact' %}">Contact us</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
 
      <div id="page-content" class="index-page">
             <section id="" class="box-content box-1" style="background: white; margin-top: 3%;">
@@ -16,7 +66,7 @@
                     </div>
             <div class="container">
 							<h2>{{ object.client_name }} </h2>
-                            <p>By {{object.author}} on {{ object.date_issued }}</p>
+                            <a class="mr-2" href="{% url 'user-client' object.author.username %}">By {{object.author}}</a>
                              {% if object.author == user %}
                                 <a class="btn btn-3 btn-sm btn-block" type="submit" href="{% url 'client-update' object.id %}">Update</a>
                                 <a class="btn btn-3 btn-sm btn-block" type="submit" href="{% url 'client-delete' object.id %}">Delete</a>
@@ -25,7 +75,9 @@
                             <p>{{object.content}}</p>
                         </div>
                 </div>
+
             </section>
+
      </div>
 
 {% endblock content %}
