--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -119,8 +119,46 @@
                         <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
                             <p style="margin-bottom: 3%;"><a href="{% url 'profile' %}">Home</a></p>
                             <h4>Heading</h4>
+                              <div id="page-content" class="index-page">
+            <section id="" class="box-content box-1" style="background: white; margin-top: 3%;">
+                <div class="container">
+                    <div class="row heading">
+                        <div class="col-lg-12">
+                            <h2>Client Details</h2>
+                            <hr>
+                            <div class="intro">Be a part of positive behaviour support.</div>
                         </div>
-                    </div>
+                  </div>
+
+        <div class="container">
+                {% for post in posts %}
+                <h2><a class="article-title" href="{% url 'client-detail' post.id %}">{{ post.client_name }}</a> </h2>
+                             <a class="mr-2" href="{% url 'user-client' post.author.username %}">By {{post.author}}</a>
+                            <div class="intro"> on {{ post.date_issued }}</div>
+                            <div class="intro">{{post.email}}</div>
+                            <p>{{post.content}}</p>
+                {% endfor %}
+                <br><br>
+                {% if is_paginated %}
+                    {% if page_obj.has_previous %}
+                    <a type="button" class="btn btn-info" href="?page=1">First</a>
+                    <a type="button" class="btn btn-info" href="?page={{ page_obj.previous_page_number}}">Previous</a>
+                    {% endif %}
+                    {% for num in page_obj.paginator.page_range %}
+                        {% if page_obj.number == num %}
+                 <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>
+                        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                 <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>
+                        {% endif %}
+                 {% endfor %}
+
+                 {% if page_obj.has_next %}
+                    <a type="button" class="btn btn-info" href="?page={{ page_obj.next_page_number }}">Next</a>
+                    <a type="button" class="btn btn-info" href="?page={{ page_obj.paginator.num_pages}}">Last</a>
+                 {% endif %}
+
+                {% endif %}
+
         <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
 
