update and delete
update and delete bug fix.

--- a/PBSS/users/templates/users/post_confirm_delete.html
+++ b/PBSS/users/templates/users/post_confirm_delete.html
@@ -23,7 +23,7 @@
                                 <h2>Are you sure you want to delete the Client"{{object.client_name}}"</h2>
                                  <fieldset class="form-group">
                                      <button class="btn btn-outline-danger" type="submit">Yes, Delete</button>
-                                     <a class="btn btn-outline-secondary" href="{% url 'client-detail' object.id %}">Cancel</a>
+                                     <a class="btn btn-outline-secondary" href="{% url 'profile' object.id %}">Cancel</a>
 
                                  </fieldset>
 
