--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -118,19 +118,19 @@
                     <div class="row heading">
                         <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
                             <p style="margin-bottom: 3%;"><a href="{% url 'profile' %}">Home</a></p>
-                            <h4>Heading</h4>
-                             {% if user.is_authenticated %}
-                              <a class="btn btn-3 btn-sm" href="{% url 'client' %}" style="margin-left: 1%;" >Client List</a>
-                            {% else %}
-                            <a class="page-scroll" href="#portal">Signup</a>
-                        </li>
-                         {% endif %}
-                        </div>
-                  </div>
+                            <h2 style="text-align: center;">Client List</h2>
+<!--                             {% if user.is_authenticated %}-->
+<!--                              <a class="btn btn-3 btn-sm" href="{% url 'client' %}" style="margin-left: 1%;" >Client List</a>-->
+<!--                            {% else %}-->
+<!--                            <a class="page-scroll" href="#portal">Signup</a>-->
+<!--                        </li>-->
+<!--                         {% endif %}-->
+<!--                        </div>-->
+<!--                  </div>-->
 
         <div class="container">
                 {% for post in posts %}
-                <h2><a class="article-title" href="{% url 'client-detail' post.id %}">{{ post.client_name }}</a> </h2>
+                <h2><a class="article-title" href="{% url 'profile' post.id %}">{{ post.client_name }}</a> </h2>
                              <a class="mr-2" href="{% url 'user-client' post.author.username %}">By {{post.author}}</a>
                             <div class="intro"> on {{ post.date_issued }}</div>
                             <div class="intro">{{post.email}}</div>
