--- a/PBSS/users/templates/users/client.html
+++ b/PBSS/users/templates/users/client.html
@@ -1,147 +1,152 @@
-{%  extends "users/dashboardbase.html" %}
-{% load crispy_forms_tags %}
-{% block content %}
-{% load static %}
+<!--&lt;!&ndash;{%  extends "users/dashboardbase.html" %}&ndash;&gt;-->
+<!--&lt;!&ndash;{% load crispy_forms_tags %}&ndash;&gt;-->
+<!--&lt;!&ndash;{% block content %}&ndash;&gt;-->
+<!--&lt;!&ndash;{% load static %}&ndash;&gt;-->
 
 
-  <div class="page-wrapper chiller-theme toggled">
-  <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
-    <i class="fas fa-bars"></i>
-  </a>
-  <nav id="sidebar" class="sidebar-wrapper">
-    <div class="sidebar-content">
-      <div class="sidebar-brand">
-          <a class="navbar-brand page-scroll" style="font-size: 26px;" href="{% url 'index' %}">PBSS</a>
-      </div>
-        <div>
-                        {%  if messages %}
-                        {% for message in messages %}
-                        <div class="alert alert-{{ message.tags }}" style="text-align: center">
-                        {{ message }}
-                        </div>
-                        {% endfor %}
-                        {%  endif %}
-                        </div>
-      <div class="sidebar-header">
-        <div class="user-pic">
-          <img class="img-responsive img-rounded" src="{{ user.profile.image.url }}"
-            alt="User picture">
-        </div>
+<!--&lt;!&ndash;  <div class="page-wrapper chiller-theme toggled">&ndash;&gt;-->
+<!--&lt;!&ndash;  <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">&ndash;&gt;-->
+<!--&lt;!&ndash;    <i class="fas fa-bars"></i>&ndash;&gt;-->
+<!--&lt;!&ndash;  </a>&ndash;&gt;-->
+<!--&lt;!&ndash;  <nav id="sidebar" class="sidebar-wrapper">&ndash;&gt;-->
+<!--&lt;!&ndash;    <div class="sidebar-content">&ndash;&gt;-->
+<!--&lt;!&ndash;      <div class="sidebar-brand">&ndash;&gt;-->
+<!--&lt;!&ndash;          <a class="navbar-brand page-scroll" style="font-size: 26px;" href="{% url 'index' %}">PBSS</a>&ndash;&gt;-->
+<!--&lt;!&ndash;      </div>&ndash;&gt;-->
+<!--&lt;!&ndash;        <div>&ndash;&gt;-->
+<!--&lt;!&ndash;                        {%  if messages %}&ndash;&gt;-->
+<!--&lt;!&ndash;                        {% for message in messages %}&ndash;&gt;-->
+<!--&lt;!&ndash;                        <div class="alert alert-{{ message.tags }}" style="text-align: center">&ndash;&gt;-->
+<!--&lt;!&ndash;                        {{ message }}&ndash;&gt;-->
+<!--&lt;!&ndash;                        </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                        {% endfor %}&ndash;&gt;-->
+<!--&lt;!&ndash;                        {%  endif %}&ndash;&gt;-->
+<!--&lt;!&ndash;                        </div>&ndash;&gt;-->
+<!--&lt;!&ndash;      <div class="sidebar-header">&ndash;&gt;-->
+<!--&lt;!&ndash;        <div class="user-pic">&ndash;&gt;-->
+<!--&lt;!&ndash;          <img class="img-responsive img-rounded" src="{{ user.profile.image.url }}"&ndash;&gt;-->
+<!--&lt;!&ndash;            alt="User picture">&ndash;&gt;-->
+<!--&lt;!&ndash;        </div>&ndash;&gt;-->
 
 
 
-        <div class="user-info">
-          <span class="user-name" style="margin-top: 6%; margin-bottom: 6%;">Hello, {{ user.username }}</span>
-            <span class="user-name" style="margin-top: 6%;">Mail ID:</span>  <span class="user-name" style="margin-top: 6%;">{{ user.email }}</span>
-        </div>
-      </div>
+<!--&lt;!&ndash;        <div class="user-info">&ndash;&gt;-->
+<!--&lt;!&ndash;          <span class="user-name" style="margin-top: 6%; margin-bottom: 6%;">Hello, {{ user.username }}</span>&ndash;&gt;-->
+<!--&lt;!&ndash;            <span class="user-name" style="margin-top: 6%;">Mail ID:</span>  <span class="user-name" style="margin-top: 6%;">{{ user.email }}</span>&ndash;&gt;-->
+<!--&lt;!&ndash;        </div>&ndash;&gt;-->
+<!--&lt;!&ndash;      </div>&ndash;&gt;-->
 
 
-      <!-- sidebar-search  -->
-      <div class="sidebar-menu">
-        <ul>
-          <li class="header-menu">
-            <span style="font-size: 24px; margin-top: 4%; margin-bottom: 4%;">General</span>
-          </li>
-             <li class="sidebar-dropdown">
-           <a href="{% url 'profile' %}">
-              <span>Home</span>
-            </a>
-          </li>
-          <li class="sidebar-dropdown">
-           <a href="{% url 'edit_profile' %}">
-              <span>Edit Profile</span>
-            </a>
-          </li>
-          <li class="sidebar-dropdown">
-            <a href="{% url 'fbaform' %}" >
-              <span>BR Report</span>
-            </a>
-          </li>
-          <li class="sidebar-dropdown">
-            <a href="{% url 'fbaform' %}" >
-              <span>FBA form</span>
-            </a>
-          </li>
-            <li class="sidebar-dropdown">
-            <a href="{% url 'logout' %}" >
-              <span>Logout</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <!-- sidebar-menu  -->
-    </div>
+<!--&lt;!&ndash;&lt;!&ndash;      &lt;!&ndash; sidebar-search  &ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;      <div class="sidebar-menu">&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;        <ul>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;          <li class="header-menu">&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;            <span style="font-size: 24px; margin-top: 4%; margin-bottom: 4%;">General</span>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;          </li>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;             <li class="sidebar-dropdown">&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;           <a href="{% url 'profile' %}">&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;              <span>Home</span>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;            </a>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;          </li>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;            <li class="sidebar-dropdown">&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;           <a href="{% url 'profile' %}">&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;              <span>New client</span>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;            </a>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;          </li>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;          <li class="sidebar-dropdown">&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;           <a href="{% url 'edit_profile' %}">&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;              <span>Edit Profile</span>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;            </a>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;          </li>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;          <li class="sidebar-dropdown">&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;            <a href="{% url 'fbaform' %}" >&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;              <span>BR Report</span>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;            </a>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;          </li>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;          <li class="sidebar-dropdown">&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;            <a href="{% url 'fbaform' %}" >&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;              <span>FBA form</span>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;            </a>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;          </li>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;            <li class="sidebar-dropdown">&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;            <a href="{% url 'logout' %}" >&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;              <span>Logout</span>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;            </a>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;          </li>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;        </ul>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;      </div>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;      &lt;!&ndash; sidebar-menu  &ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;    </div>&ndash;&gt;&ndash;&gt;-->
 
-  </nav>
-  <!-- sidebar-wrapper  -->
-  <main class="page-content">
-    <div class="container-fluid">
-       <h2 style="text-align: center;">Dashboard</h2>
-        <hr>
-      <div class="row">
-        <div class="form-group col-md-12">
-          <p style="text-align: center;">Manage work on daily basis.</p>
-        </div>
-      </div>
-         <div class="container">
-                    <div class="row heading">
-                        <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-                            <p style="margin-bottom: 3%;"><a href="{% url 'profile' %}">Home</a></p>
-                            <h4>Heading</h4>
-                             {% if user.is_authenticated %}
-                              <a class="btn btn-3 btn-sm" href="{% url 'client' %}" style="margin-left: 1%;" >Client List</a>
-                                 <a class="btn btn-3 btn-sm" href="{% url 'client-create' %}" style="margin-left: 1%;" >Add A new client</a>
-                            {% else %}
-                            <a class="page-scroll" href="#portal">login</a>
-                        </li>
-                         {% endif %}
-                        </div>
-                    </div>
-        <div class="row">
-        <div class="col-sm-12">
-             <h2>Client Details</h2>
-                            <hr>
-                            <div class="intro">Be a part of positive behaviour support.</div>
-                        </div>
-                    </div>
-            <div class="container">
-                {% for post in posts %}
-                <h2><a class="article-title" href="{% url 'client-detail' post.id %}">{{ post.client_name }}</a> </h2>
-                             <a class="mr-2" href="{% url 'user-client' post.author.username %}">By {{post.author}}</a>
-                            <div class="intro"> on {{ post.date_issued }}</div>
-                            <div class="intro">{{post.email}}</div>
-                            <p>{{post.content}}</p>
-                {% endfor %}
-                <br><br>
-                {% if is_paginated %}
-                    {% if page_obj.has_previous %}
-                    <a type="button" class="btn btn-info" href="?page=1">First</a>
-                    <a type="button" class="btn btn-info" href="?page={{ page_obj.previous_page_number}}">Previous</a>
-                    {% endif %}
-                    {% for num in page_obj.paginator.page_range %}
-                        {% if page_obj.number == num %}
-                 <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>
-                        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-                 <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>
-                        {% endif %}
-                 {% endfor %}
+<!--&lt;!&ndash;&lt;!&ndash;  </nav>&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;  &lt;!&ndash; sidebar-wrapper  &ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;  <main class="page-content">&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;    <div class="container-fluid">&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;       <h2 style="text-align: center;">Dashboard</h2>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;        <hr>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;      <div class="row">&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;        <div class="form-group col-md-12">&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;          <p style="text-align: center;">Manage work on daily basis.</p>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;        </div>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;      </div>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;         <div class="container">&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                    <div class="row heading">&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                        <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                            <p style="margin-bottom: 3%;"><a href="{% url 'profile' %}">Home</a></p>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                            <h4>Heading</h4>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                             {% if user.is_authenticated %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                              <a class="btn btn-3 btn-sm" href="{% url 'client' %}" style="margin-left: 1%;" >Client List</a>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                                 <a class="btn btn-3 btn-sm" href="{% url 'client-create' %}" style="margin-left: 1%;" >Add A new client</a>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                            {% else %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                            <a class="page-scroll" href="#portal">login</a>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                        </li>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                         {% endif %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                        </div>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                    </div>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;        <div class="row">&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;        <div class="col-sm-12">&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;             <h2>Client Details</h2>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                            <hr>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                            <div class="intro">Be a part of positive behaviour support.</div>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                        </div>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                    </div>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;            <div class="container">&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                {% for post in posts %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                <h2><a class="article-title" href="{% url 'client-detail' post.id %}">{{ post.client_name }}</a> </h2>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                             <a class="mr-2" href="{% url 'user-client' post.author.username %}">By {{post.author}}</a>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                            <div class="intro"> on {{ post.date_issued }}</div>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                            <div class="intro">{{post.email}}</div>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                            <p>{{post.content}}</p>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                {% endfor %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                <br><br>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                {% if is_paginated %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                    {% if page_obj.has_previous %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                    <a type="button" class="btn btn-info" href="?page=1">First</a>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                    <a type="button" class="btn btn-info" href="?page={{ page_obj.previous_page_number}}">Previous</a>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                    {% endif %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                    {% for num in page_obj.paginator.page_range %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                        {% if page_obj.number == num %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                 <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                 <a type="button" class="btn btn-info" href="?page={{ num }}">{{ num }}</a>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                        {% endif %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                 {% endfor %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
 
-                 {% if page_obj.has_next %}
-                    <a type="button" class="btn btn-info" href="?page={{ page_obj.next_page_number }}">Next</a>
-                    <a type="button" class="btn btn-info" href="?page={{ page_obj.paginator.num_pages}}">Last</a>
-                 {% endif %}
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                 {% if page_obj.has_next %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                    <a type="button" class="btn btn-info" href="?page={{ page_obj.next_page_number }}">Next</a>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                    <a type="button" class="btn btn-info" href="?page={{ page_obj.paginator.num_pages}}">Last</a>&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                 {% endif %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
 
-                {% endif %}
+<!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash;                {% endif %}&ndash;&gt;&ndash;&gt;&ndash;&gt;-->
 
-                        </div>
-                </div>
-        </div>
-  </main>
-  <!-- page-content" -->
-</div>
+<!--                        </div>-->
+<!--                </div>-->
+<!--        </div>-->
+<!--  </main>-->
+<!--  &lt;!&ndash; page-content" &ndash;&gt;-->
+<!--</div>-->
 
-{% endblock content %}
+<!--{% endblock content %}-->
 
 
 
