--- a/PBSS/users/templates/users/post_form.html
+++ b/PBSS/users/templates/users/post_form.html
@@ -76,7 +76,7 @@
                                     {{ form| crispy }}
                                  </fieldset>
                                 <div class="form-group">
-                                 <button class="btn btn-3 btn-sm btn-block" type="submit" >Add Client </button>
+                                 <button class="btn btn-3 btn-sm btn-block" type="submit" href="{% url 'client' %}">Add Client</button>
                                 </div>
                             </form>
                         </div>
