--- a/PBSS/fbaform/templates/fbaform/fbaform.html
+++ b/PBSS/fbaform/templates/fbaform/fbaform.html
@@ -2,83 +2,7 @@
 {% block content %}
         {% load static %}
 
-
-           <div class="page-wrapper chiller-theme toggled">
-  <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
-    <i class="fas fa-bars"></i>
-  </a>
-  <nav id="sidebar" class="sidebar-wrapper">
-    <div class="sidebar-content">
-      <div class="sidebar-brand">
-          <a class="navbar-brand page-scroll" style="font-size: 26px;" href="{% url 'index' %}">PBSS</a>
-      </div>
-        <div>
-                        {%  if messages %}
-                        {% for message in messages %}
-                        <div class="alert alert-{{ message.tags }}" style="text-align: center">
-                        {{ message }}
-                        </div>
-                        {% endfor %}
-                        {%  endif %}
-                        </div>
-      <div class="sidebar-header">
-        <div class="user-pic">
-          <img class="img-responsive img-rounded" src="{{ user.profile.image.url }}"
-            alt="User picture">
-        </div>
-
-
-
-        <div class="user-info">
-          <span class="user-name" style="margin-top: 6%; margin-bottom: 6%;">Hello, {{ user.username }}</span>
-            <span class="user-name" style="margin-top: 6%;">Mail ID:</span>  <span class="user-name" style="margin-top: 6%;">{{ user.email }}</span>
-        </div>
-      </div>
-
-
-      <!-- sidebar-search  -->
-      <div class="sidebar-menu">
-        <ul>
-          <li class="header-menu">
-            <span style="font-size: 24px; margin-top: 4%; margin-bottom: 4%;">General</span>
-          </li>
-             <li class="sidebar-dropdown">
-           <a href="{% url 'profile' %}">
-              <span>Home</span>
-            </a>
-          </li>
-          <li class="sidebar-dropdown">
-           <a href="{% url 'edit_profile' %}">
-              <span>Edit Profile</span>
-            </a>
-          </li>
-          <li class="sidebar-dropdown">
-            <a href="{% url 'fbaform' %}" >
-              <span>BR Report</span>
-            </a>
-          </li>
-          <li class="sidebar-dropdown">
-            <a href="{% url 'fbaform' %}" >
-              <span>FBA form</span>
-            </a>
-          </li>
-            <li class="sidebar-dropdown">
-            <a href="{% url 'logout' %}" >
-              <span>Logout</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <!-- sidebar-menu  -->
-    </div>
-
-  </nav>
-  <!-- sidebar-wrapper  -->
-
-
-
-
-  <main class="page-content">
+ <main class="page-content">
     <div class="container">
        <h2 style="text-align: center;">Dashboard</h2>
         <hr>
@@ -104,7 +28,7 @@
         <div class="container">
                     <div class="row heading">
                         <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-                               <p style="margin-bottom: 3%;"><a href="{% url 'profile' %}">Home</a> > <a href="{% url 'fbaform' %}"> FBA Form</a></p>
+                               <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a> > <a href="{% url 'fbaform' %}"> FBA Form</a></p>
                             <div class="profile-form" style= "margin: 0%;">
                              <form class="my-2 my-lg-0" method="POST">
                 {% csrf_token %}
