--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -3,113 +3,6 @@
 {% block content %}
 {% load static %}
 
- <!-- i have to add nav bar which will be redirected to this page.-->
-<!--    <div class="profile-form">-->
-<!--            <div class="row">-->
-<!--                <div class="col-mt-3">-->
-<!--                <div class="content-section">-->
-<!--                    <div class="content-section">-->
-<!--                        <div class="media">-->
-<!--                        <div >-->
-<!--                        {%  if messages %}-->
-<!--                        {% for message in messages %}-->
-<!--                        <div class="alert alert-{{ message.tags }}" style="text-align: center">-->
-<!--                        {{ message }}-->
-<!--                        </div>-->
-<!--                        {% endfor %}-->
-<!--                        {%  endif %}-->
-<!--                        </div>-->
-<!--                            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">-->
-<!--                            <div  class="media-body">-->
-<!--                                <h2 class="account-heading">{{ user.username }}</h2>-->
-<!--                                <p class="text-secondary">{{ user.email }}</p>-->
-<!--                                 <a class="btn btn-3 btn-sm" href="{% url 'edit_profile' %}" >Edit Profile</a>-->
-<!--                                <a class="btn btn-3 btn-sm" href="#" >BR Report</a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            </div>-->
-<!--    </div>-->
-
-        <div class="page-wrapper chiller-theme toggled">
-  <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
-    <i class="fas fa-bars"></i>
-  </a>
-  <nav id="sidebar" class="sidebar-wrapper">
-    <div class="sidebar-content">
-      <div class="sidebar-brand">
-          <a class="navbar-brand page-scroll" style="font-size: 26px;" href="{% url 'index' %}">PBSS</a>
-      </div>
-        <div>
-                        {%  if messages %}
-                        {% for message in messages %}
-                        <div class="alert alert-{{ message.tags }}" style="text-align: center">
-                        {{ message }}
-                        </div>
-                        {% endfor %}
-                        {%  endif %}
-                        </div>
-      <div class="sidebar-header">
-        <div class="user-pic">
-          <img class="img-responsive img-rounded" src="{{ user.profile.image.url }}"
-            alt="User picture">
-        </div>
-
-
-
-        <div class="user-info">
-          <span class="user-name" style="margin-top: 6%; margin-bottom: 6%;">Hello, {{ user.username }}</span>
-            <span class="user-name" style="margin-top: 6%;">Mail ID:</span>  <span class="user-name" style="margin-top: 6%;">{{ user.email }}</span>
-        </div>
-      </div>
-
-
-      <!-- sidebar-search  -->
-      <div class="sidebar-menu">
-        <ul>
-          <li class="header-menu">
-            <span style="font-size: 24px; margin-top: 4%; margin-bottom: 4%;">General</span>
-          </li>
-             <li class="sidebar-dropdown">
-           <a href="{% url 'client' %}">
-              <span>Home</span>
-            </a>
-          </li>
-            <li class="sidebar-dropdown">
-           <a href="{% url 'client-create' %}">
-              <span>New Client</span>
-            </a>
-          </li>
-          <li class="sidebar-dropdown">
-            <a href="{% url 'fbaform' %}" >
-              <span>BR Report</span>
-            </a>
-          </li>
-          <li class="sidebar-dropdown">
-            <a href="{% url 'fbaform' %}" >
-              <span>FBA form</span>
-            </a>
-          </li>
-            <li class="sidebar-dropdown">
-           <a href="{% url 'edit_profile' %}">
-              <span>Edit Profile</span>
-            </a>
-          </li>
-            <li class="sidebar-dropdown">
-            <a href="{% url 'logout' %}" >
-              <span>Logout</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <!-- sidebar-menu  -->
-    </div>
-
-  </nav>
-  <!-- sidebar-wrapper  -->
   <main class="page-content">
     <div class="container-fluid">
        <h2 style="text-align: center;">Dashboard</h2>
@@ -122,22 +15,15 @@
          <div class="container">
                     <div class="row heading">
                         <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
-                            <p style="margin-bottom: 3%;"><a href="{% url 'profile' %}">Home</a></p>
+                            <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a></p>
                             <h2 style="text-align: center;">Client Lists - ({{page_obj.paginator.count}})</h2>
-<!--                             {% if user.is_authenticated %}-->
-<!--                              <a class="btn btn-3 btn-sm" href="{% url 'client' %}" style="margin-left: 1%;" >Client List</a>-->
-<!--                            {% else %}-->
-<!--                            <a class="page-scroll" href="#portal">Signup</a>-->
-<!--                        </li>-->
-<!--                         {% endif %}-->
-<!--                        </div>-->
-<!--                  </div>-->
-<br><br>
+                    <br><br>
         <div class="container">
                 {% for post in posts %}
                 <h2><a class="article-title" href="{% url 'profile' post.id %}">{{ post.client_name }}</a> </h2>
                              <a class="mr-2" href="{% url 'user-client' post.author.username %}">By {{post.author}}</a>
                             <div class="intro"> on {{ post.date_issued }}</div>
+                            <div class="intro">{{post.DOB}}</div>
                             <div class="intro">{{post.email}}</div>
                             <p>{{post.content}}</p>
                 {% endfor %}
@@ -181,7 +67,6 @@
       </div>
   </main>
     </div>
-
 
 
 
