--- a/PBSS/users/templates/users/post_confirm_delete.html
+++ b/PBSS/users/templates/users/post_confirm_delete.html
@@ -1,4 +1,4 @@
-{%  extends "users/userbase.html" %}
+{%  extends "users/dashboardbase.html" %}
 {% block content %}
         {% load static %}
         {% load crispy_forms_tags %}
