--- a/PBSS/freefbaform/templates/freefbaform/freefbaform.html
+++ b/PBSS/freefbaform/templates/freefbaform/freefbaform.html
@@ -34,7 +34,7 @@
 <!--</script>-->
 
 
-    <div id="page-content" class="index-page container-fluid">
+    <div id="page-content" class="index-page container-fluid" style="padding-right: 0px; padding-left: 0px;">
                 <section id="" class="box-content box-1" style="background: white; margin-top: 3%;">
                     <div class="container-fluid">
                         <div class="row heading">
@@ -43,20 +43,16 @@
                             <hr>
                         </div>
                     </div>
-                        <div id="Button1">
-                        <button class="btn btn-3 btn-sm" onclick="myFunction()" name="print" id="print" style="float: right;">Print</button>
-                        <a button class="btn btn-3 btn-sm"  style="float: right; margin-right: 2%;" href="{% url 'profile' %}">Next</a> </button>
-                        </div>
                             <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-sm-12">
                             <div id="Noprint">
                             <div class="row box-item"><br><br>
-                                <p style="text-align: left; line-height: 2; padding-top: 8%; margin: 4%;">Functional behaviour assessment tool analyse the behaviour of an individual by there actions, we are providing a tool for everyone who wants to know more about the behaviour of an individual.</p>
+                                <p style="text-align: left; line-height: 2; margin-left: 7%; margin-right: 6%;">Functional behaviour assessment tool analyse the behaviour of an individual by there actions, we are providing a tool for everyone who wants to know more about the behaviour of an individual.</p>
                             </div>
                             </div>
                         </div>
                         <div class="col-md-8">
-                            <div id="contact-form">
+                            <div id="contact-form" style="text-align: left; line-height: 2; margin-left: 6%; margin-right: 6%;">
                                 <form name="form1" method="post">
                                     <div class="row">
                                         <div class="col-md-6">
