--- a/PBSS/contact/templates/contact.html
+++ b/PBSS/contact/templates/contact.html
@@ -14,7 +14,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4 ">
+                        <div class="col-sm-12">
                             <div class="row box-item">
                                 <h3>How can we help?</h3>
                                 <p style="line-height: 2;">Please select a topic that you are not able to find according to your need. click the contact form and complete the required information we will get back to you as soon as possible.</p>
