--- a/PBSS/positivebehaviour/templates/positivebehaviour/base.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/base.html
@@ -62,7 +62,7 @@
                              <li>
 
                          {% else %}
-                            <a class="page-scroll" href="#portal">Signup</a>
+                            <a class="page-scroll" href="#portal">My Account</a>
                         </li>
                          {% endif %}
 
