--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -381,7 +381,7 @@
                         </div>	<!-- cd-testimonials-all-wrapper -->
                         <a href="#0" class="close-btn">Close</a>
                     </div> <!-- cd-testimonials-all -->
-                </div>
+                     </div></div>
             </section>
 
 {% endblock content %}
