--- a/PBSS/users/templates/users/logout.html
+++ b/PBSS/users/templates/users/logout.html
@@ -1,4 +1,4 @@
-{%  extends "users/dashboardbase.html" %}
+{%  extends "users/userbase.html" %}
 {% block content %}
     {% load static %}
     {% load crispy_forms_tags %}
