Redirection of pages

--- a/PBSS/users/templates/users/dashboardbase.html
+++ b/PBSS/users/templates/users/dashboardbase.html
@@ -33,7 +33,7 @@
   <nav id="sidebar" class="sidebar-wrapper">
     <div class="sidebar-content">
       <div class="sidebar-brand">
-          <a class="navbar-brand page-scroll" style="font-size: 26px;" href="{% url 'index' %}">PBSS</a>
+          <a class="navbar-brand page-scroll" style="font-size: 26px;" href="{% url 'client' %}">PBSS</a>
       </div>
         <div>
                         {%  if messages %}
@@ -81,7 +81,7 @@
             </a>
           </li>
           <li class="sidebar-dropdown">
-            <a href="{% url 'fbaform' %}" >
+            <a href="{% url 'index' %}" >
               <span>FBA form</span>
             </a>
           </li>
