STD Page changes

--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -25,7 +25,7 @@
                     <div>
                         {%  if messages %}
                             {% for message in messages %}
-                               <div class="alert alert-{{ message.tags }}">
+                               <div class="alert alert-{{ message.tags }}" style="font-size: 25px; text-align: center;">
                                 {{ message }}
                                </div>
                             {% endfor %}
