--- a/PBSS/contact/templates/contact.html
+++ b/PBSS/contact/templates/contact.html
@@ -8,6 +8,11 @@
                     <div class="row heading">
                         <div class="col-lg-12">
                             <a href="{% url 'index' %}"><i class="fa fa-arrow-circle-left" style="font-size:40px; border: none; float: left; color: blue;"></i></a>
+                            {% if submitted %}
+       <p class="success">
+             Your message was submitted successfully. Thank you.
+        </p>
+                            {% else %}
                             <h2>Contact us</h2>
                             <hr>
                             <div class="intro">The support team is here to help, drop us a line.</div>
@@ -46,6 +51,7 @@
                     </div>
                 </div>
             </section>
+{% endif %}
     </div>
 
 
