--- a/PBSS/form_fba/templates/index.html
+++ b/PBSS/form_fba/templates/index.html
@@ -1,20 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>FBA</title>
-</head>
-<body>
-<form method="POST" class="post-form" action="/std/">
+{%  extends "users/dashboardbase.html" %}
+{% load crispy_forms_tags %}
+{% block content %}
+{% load static %}
+
+  <main class="page-content">
+    <div class="container-fluid">
+       <h2 style="text-align: center;">Dashboard</h2>
+        <hr>
+      <div class="row">
+        <div class="form-group col-md-12">
+          <p style="text-align: center;">Manage work on daily basis.</p>
+        </div>
+      </div>
+         <div class="container">
+                    <div class="row heading">
+                        <div class="col-lg-12" style="margin-top: 5%; margin-bottom: 3%;">
+                            <p style="margin-bottom: 3%;"><a href="{% url 'client' %}">Home</a></p>
+                            <h2 style="text-align: center;">Functional Behaviour Assessment</h2>
+                    <br><br>
+        <div class="container">
+               <form method="POST" class="post-form" action="/std/">
     {% csrf_token %}
     <div class="container">
 
         <br>
 
         <div class="form-group row">
-            <label class="col-sm-1"> </label>
-                <div class="col-sm-4">
-        <h3> Enter your FBA form</h3>
+                <div class="col-sm-12">
+        <p style="margin-bottom: 2%;">Enter your details in FBA form</p>
                 </div>
         </div>
 
@@ -49,5 +62,27 @@
 
     </div>
 </form>
-</body>
-</html>
+
+        <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+
+        </div>
+        </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+
+                </div>
+        </div>
+            <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+
+          </div>
+        </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+        </div>
+                        </div></div></div></div>
+  </main>
+    </div>
+
+
+
+{% endblock content %}
